<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" tools:override="true">e-Doctor</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_search">Find doctor</string>
    <string name="btn_medcard">Medcard</string>
    <string name="btn_doctor_access">Doctor access</string>
    <string name="btn_medcards">Medcards</string>
    <string name="btn_account">Account</string>
    <string name="kilometers">km</string>
    <string name="meters">m</string>
    <string name="open_permission_settings_request_title">Open permission settings?</string>
    <string name="open_permission_settings_request_message">Please, enable location permission to be able to see your location on the map.</string>
    <string name="open_gps_settings_request_title">Open GPS settings?</string>
    <string name="open_gps_settings_request_message">Please, turn on GPS to be able to see your location on the map.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="try_again">Try again</string>
    <string name="media_upload_error_message">Unable to upload</string>
    <string name="empty_bought_excursions">Bought excursions will be shown here</string>
    <string name="unhandled_error_message">Something went wrong.</string>
    <string name="server_login_error_message">Either login or password is incorrect.</string>
    <string name="server_registration_error_message">The data you typed is invalid.</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="download_excursion">Download excursion</string>
    <string name="search_excursions">Name or specialization</string>
    <string name="type_search_excursions">Find doctor by name or email</string>
    <string name="nothing_was_found">There were found nothing. Try to change your request</string>
    <string name="empty_medical_accesses_for_patient">Open doctor\'s profile and give access to your medcard to at least one doctor</string>
    <string name="empty_medical_accesses_for_doctor">Neither of patients gave you access to his medcard yet</string>
    <string name="email_too_short">At least 5 characters</string>
    <string name="email_too_long">At most 64 characters</string>
    <string name="email_not_valid">Not a valid email</string>
    <string name="password_hint">Password</string>
    <string name="password_too_short">At least 5 characters</string>
    <string name="password_too_long">At most 64 characters</string>
    <string name="email_hint">Email</string>
    <string name="email_error">At least 5 characters</string>
    <string name="full_name_hint">Full name</string>
    <string name="city_hint">City</string>
    <string name="gender_hint">Gender</string>
    <string name="blood_group_hint">Blood group</string>
    <string name="ready_for_consultation_now">Ready for consultation now</string>
    <string name="ready_for_audio_and_video">Ready to use Audio and Video</string>
    <string name="years_of_experience_hint">Years of practical experience</string>
    <string name="category_hint">Category</string>
    <string name="specialization_hint">Specialization</string>
    <string name="clinical_interests_hint">Clinical interests</string>
    <string name="medcard_access_for_patient_hint">Access to your medcard</string>
    <string name="record_request_for_patient_hint">Records from doctor</string>
    <string name="record_request_for_doctor_hint">Your records</string>
    <string name="record_request_for_patient_emtpy">Doctor did not send any records to your medcard</string>
    <string name="record_request_for_patient_param">Doctor sent %1$d records to your medcard</string>
    <string name="record_request_for_doctor_emtpy">You did not send any records to patient medcard</string>
    <string name="record_request_for_doctor_param">You sent %1$d records to patient medcard</string>
    <string name="medcard_access_for_doctor_hint">Access to patient medcard</string>
    <string name="doctor_has_no_access_to_medcard">Doctor has no read access to your medcard</string>
    <string name="you_have_no_access_to_medcard">You have no read access to patient medcard</string>
    <string name="education_hint">Education</string>
    <string name="work_experience_hint">Work experience</string>
    <string name="trainings_hint">Trainings</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="first_name_error">At least 1 character</string>
    <string name="second_name_hint">Last name</string>
    <string name="login_button">Log in</string>
    <string name="log_out_button">Log out</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enjoy_zighter">Enjoy Zighter!</string>
    <string name="new_at_edoctor">New at eDoctor?</string>
    <string name="alteady_registered">Already registered?</string>
    <string name="you_are_user">Are you %1$s?</string>
    <string name="patient">patient</string>
    <string name="doctor">doctor</string>
    <string name="action_as_user">%1$s as %2$s</string>
    <string name="your_guide">Your guide</string>
    <string name="you_logged_in_as">You logged in as:</string>
    <string name="rouble" translatable="false">\u20BD</string>
    <string name="free" translatable="false">FREE</string>
    <string name="map">Route</string>
    <string name="map_and_media">Media</string>
    <string name="guide">Guide</string>
    <string name="network_error_message">An error while downloading data. Please, check your connection.</string>
    <string name="medcard_access_changed">Medcard access settings were changed</string>
    <string name="read_access_types_count_param">Read access to %1$d record types out of %2$d</string>
    <string name="image_upload_error_message">An error while uploading image</string>
    <string name="personal_recommendation">Your personal recommendation</string>
    <string name="default_sort">Default</string>
    <string name="cheapest_sort">From cheapest</string>
    <string name="expensive_sort">From most expensive</string>
    <string name="oldest_sort">From oldest</string>
    <string name="newest_sort">From newest</string>
    <string name="only_route_supported">Media and Guide will be added automatically when adding Route. Thank you for using Zighter.</string>
    <string name="money_not_supported">Money transfers not supported yet. Please, choose free excursions from the list. Thank you for using Zighter.</string>
    <string name="route_added">Route has been added to the list of your excursions.</string>
    <string name="adding_exception">Unable to add route. Please, choose another route and try again.</string>
    <string name="register">Register</string>
    <string name="save_changes">Save changes</string>
    <string name="delete">Delete</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none_category">None</string>
    <string name="second_category">Second</string>
    <string name="first_category">First</string>
    <string name="highest_category">Highest</string>
    <string name="doctor_no_category">Doctor</string>
    <string name="doctor_second_category">Second category doctor</string>
    <string name="doctor_first_category">First category doctor</string>
    <string name="doctor_highest_category">Highest category doctor</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="main_information">Main information</string>
    <string name="career">Career</string>
    <string name="consultations_settings">Consultations</string>
    <string name="incoming_call">Incoming call</string>
    <string name="outcoming_call">Outcoming call</string>
    <string name="call_started">Call started</string>
    <string name="call_ended">Call ended</string>
    <string name="first_negative" translatable="false">I -</string>
    <string name="first_positive" translatable="false">I +</string>
    <string name="second_negative" translatable="false">II -</string>
    <string name="second_positive" translatable="false">II +</string>
    <string name="third_negative" translatable="false">III -</string>
    <string name="third_positive" translatable="false">III +</string>
    <string name="fourth_negative" translatable="false">IV -</string>
    <string name="fourth_positive" translatable="false">IV +</string>
    <string name="tab_events">Events</string>
    <string name="tab_parameters">Parameters</string>
    <string name="parameter">Parameter</string>
    <string name="event">Event</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="temperature">Temperature</string>
    <string name="blood_oxygen">Blood oxygen</string>
    <string name="new_parameter">New parameter</string>
    <string name="cm_param">%1$.1f cm</string>
    <string name="kg_param">%1$.1f kg</string>
    <string name="mmHg_params">%1$d/%2$d mmHg</string>
    <string name="mmol_per_liter_param">%1$.1f mmol/L</string>
    <string name="celcius_param" translatable="false">%1$.1f °C</string>
    <string name="percent_param" translatable="false">%1$d %%</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="mmHg">mmHg</string>
    <string name="mmol_per_liter">mmol/L</string>
    <string name="celcius" translatable="false">°C</string>
    <string name="percent" translatable="false">%</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="unit">Unit</string>
    <string name="value">Value</string>
    <string name="systolic_value">Systolic value</string>
    <string name="diastolic_value">Diastolic value</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="clinic_name">Clinic name</string>
    <string name="doctor_name">Doctor name</string>
    <string name="doctor_specialization">Doctor specialization</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="comment">Comment</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="symptoms">Symptoms</string>
    <string name="recipe">Recipe</string>
    <string name="conclusion">Result</string>
    <string name="allergen">Allergen</string>
    <string name="diagnosis_and_recommendations">Diagnosis and recommendations</string>
    <string name="complaints">Complaints</string>
    <string name="fields_wrong_content">Wrong field values</string>
    <string name="analysis">Analysis</string>
    <string name="allergy">Allergy</string>
    <string name="note">Note</string>
    <string name="vaccination">Vaccination</string>
    <string name="procedure">Procedure</string>
    <string name="doctor_visit">Doctor visit</string>
    <string name="sickness">Sickness</string>
    <string name="open_chat">Open chat</string>
    <string name="years_of_experince_param">%1$d years of practical experience</string>
    <string name="years_param">%1$d years</string>
    <string name="name_not_set">Name not set</string>
    <string name="doctor_access">Doctor access</string>
    <string name="choose_medical_record_types">Choose medical records that the doctor will be able to read. You can change these settings anytime</string>
    <string name="requested_records_from_doctor_disclaimer">These records were send you by the doctor. You can delete them or move to your medcard</string>
    <string name="records_from_doctor">Records from doctor</string>
    <string name="records_for_patient">Records for patient</string>
</resources>