<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/welcome_back"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:errorEnabled="true"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/auth_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/login_button_green"
                android:text="@string/login_button"
                android:textColor="@color/primaryTextWhite"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/new_at_edoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hintText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_button"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/new_at_edoctor"/>

        <TextView
                android:id="@+id/you_are_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hintText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_at_edoctor"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/new_at_edoctor"/>

        <View
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/you_are_doctor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>